# mll_package

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_main.c  test_main.cpp
include/: mll.h
include/dlib/cmake_utils/test_for_cpp11/: CMakeCache.txt  Makefile  cmake_install.cmake
include/mysql/cppconn/: version_info.h
libs/: README.md  libdlib.so.19.4.0  libmysqlcppconn.so.7
src/: mll.cpp
