cmake_minimum_required(VERSION 2.8.12)

PROJECT(mll)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -DDLIB_JPEG_SUPPORT")
IF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
ENDIF()

# include directories
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include 
)

# lib directories
LINK_DIRECTORIES(
  ${PROJECT_BINARY_DIR}/libs
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)


# CMakeLists for src directory
SET(MLL_SRCS ${PROJECT_BINARY_DIR}/src/mll.cpp)

# shared library
ADD_LIBRARY(libmll SHARED ${MLL_SRCS})

# static library
ADD_LIBRARY(mllstatic STATIC ${MLL_SRCS})

SET(TEST_MAIN test_main.cpp)
ADD_EXECUTABLE(test_main ${TEST_MAIN})
TARGET_LINK_LIBRARIES(test_main libmll)
